# LocalFileService

./: Cargo.toml  upload.html
src/: core.rs  main.rs  server.rs
static/: index.html
tests/: test_actix.rs  test_download.rs  test_send_file.rs  test_server.rs
