[package]
name = "local_file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
#qrcode-generator = "4.1.9"
qr2term = "0.3.1"
colored = "2.0.4"
get_if_addrs = "0.5.3"


hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = "0.7.10"
bytes = "1.5.0"
futures-util = { version = "0.3", default-features = false }