[package]
name = "local_file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
#qrcode-generator = "4.1.9"
qr2term = "0.3.1"
colored = "2"
get_if_addrs = "0.5.3"
rocket = "0.5.1"
time = "0.3.36"




