[package]
name = "local_file_server"
version = "0.1.0"
edition = "2021"


[dependencies]
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
qr2term = "0.3.1"
colored = "2"
get_if_addrs = "0.5.3"
time = "0.3.36"
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sanitize-filename = "0.3"


